# SourceOracle

./: .gitignore  Cargo.toml  README.md  package-lock.json
src/: main.rs
src/downloader/: mod.rs
src/gui/: mod.rs
src/models/: mod.rs
tauri-app/: Cargo.toml  accounts.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
tauri-app/docs/commands/: library.md
tauri-app/docs/hooks/: useImagePreload.md
tauri-app/src/: App.jsx  App.vue  index.css  lib.rs
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: commands.rs  library.rs  main.rs  models.rs
tauri-app/src/components/: AccountManager.jsx  DlcManager.jsx  GameCard.jsx  GameCard.vue  GameDetails.vue  GameSearch.vue  MyLibrary.jsx  NotesManager.jsx  SettingsPanel.jsx  StartupLoader.jsx
tauri-app/src/hooks/: useImagePreload.js
tauri-app/src/utils/: steamImages.js
