[package]
name = "oracle"
version = "0.1.0"
edition = "2024"
authors = ["Nazril"]
description = "Anjay"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
zip = "0.6"
bytes = "1.4"
sanitize-filename = "0.4"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
indicatif = "0.17"
clap = { version = "4.4", features = ["derive"] }
eframe = "0.23.0"
egui = "0.23.0"
poll-promise = "0.3.0"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
uuid = { version = "1.4", features = ["v4"] }
walkdir = "2.3"
once_cell = "1.17"
