[package]
name = "oracle"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-all", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
lazy_static = "1.4"
walkdir = "2.4"
zip = "0.6.6"
uuid = { version = "1.6", features = ["v4"] }
sanitize-filename = "0.5"
urlencoding = "2.1"
regex = "1.10.2"
tempfile = "3.8.1"
once_cell = "1.17"
dirs-next = "2.0.0"
winreg = "0.51"
bytes = "1"
winapi = { version = "0.3.9", features = ["shellapi"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
